--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </main>
 
     <footer>
-        <p>Desenvolvido por Gerson Cesar Grobe de Miranda </p>
+        <p>Desenvolvido por joao guilherme 3d </p>
     </footer>
 
     <script type="module" src="common.js"></script>
