--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redes Sociais</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https"
-    charset="UTF-8" ></script>
+    <script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="utf-8"></script>
 </head>
 
 <body>
@@ -18,22 +17,16 @@
             <a href="#">Minha escola</a>
         </nav>
     </header>
-
-    <main   class="graficos-section" >
-        <section class="graficos-container"   id="graficos-container">
+    <main class="graficos-section">
+        <section id="graficos-container" class="graficos-container">
             <!-- crie os gráficos aqui -->
-
         </section>
     </main>
-
     <footer>
-        <p>Desenvolvido por joao guilherme 3d </p>
+        <p>Desenvolvido por Kaiky Rodrigues, 26</p>
     </footer>
-
-    <script type="module" src="common.js"></script>
-     <script type="module" src="informacoesGlobais.js"></script>
-    <script type="module" src="quantidadedeUsuarios.js"></script>
-    
-</body>
-
-</html>
+    <script type="module" src="graficos/common.js"></script>
+    <script type="module" src="graficos/informacoesGlobais.js"></script>
+    <script type="module" src="graficos/quantidadeUsuarios.js"></script>
+    </body>
+    </html>
