--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por joao guilherme 3d, 25</p>
+        <p>Desenvolvido por Kaiky Rodrigues, 26</p>
     </footer>
     <script type="module" src="graficos/common.js"></script>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
